[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/TestingArea.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.921569, 0.2, 0.301961, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.25
height = 0.25
is_hemisphere = true

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.47451, 0.458824, 0.462745, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 0.07, 0.15, 0.01 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.270588, 0.168627, 0.168627, 1 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 0.05, 0.13, 0.005 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 5 )
size = Vector3( 0.02, 0.01, 0.005 )

[node name="TestingArea" type="Spatial"]
script = ExtResource( 1 )

[node name="Projection" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Phone" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = null

[node name="Screen" type="MeshInstance" parent="Phone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0059485, 0.003 )
mesh = SubResource( 6 )
material/0 = null

[node name="Button" type="MeshInstance" parent="Phone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0670705, 0.0025641 )
mesh = SubResource( 7 )
material/0 = null

[node name="FixedCamera" type="Camera" parent="."]
transform = Transform( -1.78333e-08, -0.999929, 0.0119374, -3.99081e-08, 0.0119374, 0.999929, -1, 1.73557e-08, -4.01181e-08, 0, 2.747, 0 )
current = true

[node name="CameraPivot" type="Spatial" parent="."]

[node name="TrackingCamera" type="Camera" parent="CameraPivot"]
transform = Transform( -4.34865e-08, -0.487982, 0.872854, -4.42794e-09, 0.872854, 0.487982, -1, 1.73557e-08, -4.01181e-08, 1.18972, 0.950163, 0 )

[node name="Left" type="Button" parent="."]
margin_left = 8.0
margin_top = 797.0
margin_right = 196.0
margin_bottom = 866.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="."]
margin_left = 215.0
margin_top = 797.0
margin_right = 403.0
margin_bottom = 866.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrackingCameraButton" type="Button" parent="."]
margin_left = 280.0
margin_top = 715.0
margin_right = 403.0
margin_bottom = 784.0
text = "Tracking Camera"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FixedCameraButton" type="Button" parent="."]
margin_left = 9.0
margin_top = 715.0
margin_right = 132.0
margin_bottom = 784.0
text = "Fixed Camera"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 144.0
margin_top = 715.0
margin_right = 267.0
margin_bottom = 784.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccelerationGuide" type="Spatial" parent="."]

[connection signal="button_down" from="Left" to="." method="left_pressed_down"]
[connection signal="button_up" from="Left" to="." method="left_pressed_up"]
[connection signal="button_down" from="Right" to="." method="right_pressed_down"]
[connection signal="button_up" from="Right" to="." method="right_pressed_up"]
[connection signal="pressed" from="TrackingCameraButton" to="." method="use_tracking_camera"]
[connection signal="pressed" from="FixedCameraButton" to="." method="use_fixed_camera"]
[connection signal="pressed" from="Reset" to="." method="reset_pos"]
